# smart-contract-auditing-service

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/controllers/: mod.rs
backend/src/models/: audit_result.rs  mod.rs  payment_info.rs  smart_contract.rs
backend/src/routes/: audit_controller.rs  mod.rs  payment_controller.rs
backend/src/services/: audit_service.rs  mod.rs  payment_service.rs
smart-contract-samples/: hello_world.sol  problems.sol
smart_contract_analysis/: Cargo.toml
smart_contract_analysis/src/: lib.rs
smart_contract_analysis/src/analyzers/: access_control.rs  ast_visitor.rs  base_analyzer.rs  complexity.rs  dos.rs  gas.rs  integer_overflow.rs  mod.rs  reentrancy.rs  timestamp.rs  unchecked_calls.rs  vulnerability_analyzer.rs
